--- a/src/partials/breathe-in-the-space.html
+++ b/src/partials/breathe-in-the-space.html
@@ -10,30 +10,30 @@
       <picture>
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_1_min-1336.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_1_min-1336.jpg 2x
+            /img/images_gallery/img_x1_gallery_1_min-1336.jpg 1x,
+            /img/images_gallery/img_x2_gallery_1_min-1336.jpg 2x
           "
           media="(min-width: 1336px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_1_min-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_1_min-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_1_min-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_1_min-768.jpg 2x
           "
           media="(min-width: 768px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_1_max-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_1_max-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_1_max-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_1_max-768.jpg 2x
           "
           media="(max-width: 767px)"
           type="image/jpeg"
         />
         <img
-          src="../img/images_gallery/img_x1_gallery_1_max-768.jpg"
+          src="/img/images_gallery/img_x1_gallery_1_max-768.jpg"
           alt="yoga"
           width="*"
           height="auto"
@@ -45,30 +45,30 @@
       <picture>
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_2_min-1336.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_2_min-1336.jpg 2x
+            /img/images_gallery/img_x1_gallery_2_min-1336.jpg 1x,
+            /img/images_gallery/img_x2_gallery_2_min-1336.jpg 2x
           "
           media="(min-width: 1336px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_2_min-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_2_min-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_2_min-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_2_min-768.jpg 2x
           "
           media="(min-width: 768px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_2_max-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_2_max-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_2_max-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_2_max-768.jpg 2x
           "
           media="(max-width: 767px)"
           type="image/jpeg"
         />
         <img
-          src="../img/images_gallery/img_x1_gallery_2_max-768.jpg"
+          src="/img/images_gallery/img_x1_gallery_2_max-768.jpg"
           alt="yoga"
           width="*"
           height="auto"
@@ -80,30 +80,30 @@
       <picture>
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_3_min-1336.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_3_min-1336.jpg 2x
+            /img/images_gallery/img_x1_gallery_3_min-1336.jpg 1x,
+            /img/images_gallery/img_x2_gallery_3_min-1336.jpg 2x
           "
           media="(min-width: 1336px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_3_min-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_3_min-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_3_min-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_3_min-768.jpg 2x
           "
           media="(min-width: 768px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_3_max-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_3_max-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_3_max-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_3_max-768.jpg 2x
           "
           media="(max-width: 767px)"
           type="image/jpeg"
         />
         <img
-          src="../img/images_gallery/img_x1_gallery_3_max-768.jpg"
+          src="/img/images_gallery/img_x1_gallery_3_max-768.jpg"
           alt="yoga"
           width="*"
           height="auto"
@@ -115,30 +115,30 @@
       <picture>
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_4_min-1336.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_4_min-1336.jpg 2x
+            /img/images_gallery/img_x1_gallery_4_min-1336.jpg 1x,
+            /img/images_gallery/img_x2_gallery_4_min-1336.jpg 2x
           "
           media="(min-width: 1336px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_4_min-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_4_min-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_4_min-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_4_min-768.jpg 2x
           "
           media="(min-width: 768px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_4_max-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_4_max-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_4_max-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_4_max-768.jpg 2x
           "
           media="(max-width: 767px)"
           type="image/jpeg"
         />
         <img
-          src="../img/images_gallery/img_x1_gallery_4_max-768.jpg"
+          src="/img/images_gallery/img_x1_gallery_4_max-768.jpg"
           alt="yoga"
           width="*"
           height="auto"
@@ -150,30 +150,30 @@
       <picture>
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_5_min-1336.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_5_min-1336.jpg 2x
+            /img/images_gallery/img_x1_gallery_5_min-1336.jpg 1x,
+            /img/images_gallery/img_x2_gallery_5_min-1336.jpg 2x
           "
           media="(min-width: 1336px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_5_min-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_5_min-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_5_min-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_5_min-768.jpg 2x
           "
           media="(min-width: 768px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_5_max-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_5_max-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_5_max-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_5_max-768.jpg 2x
           "
           media="(max-width: 767px)"
           type="image/jpeg"
         />
         <img
-          src="../img/images_gallery/img_x1_gallery_5_max-768.jpg"
+          src="/img/images_gallery/img_x1_gallery_5_max-768.jpg"
           alt="yoga"
           width="*"
           height="auto"
@@ -185,30 +185,30 @@
       <picture>
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_6_min-1336.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_6_min-1336.jpg 2x
+            /img/images_gallery/img_x1_gallery_6_min-1336.jpg 1x,
+            /img/images_gallery/img_x2_gallery_6_min-1336.jpg 2x
           "
           media="(min-width: 1336px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_6_min-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_6_min-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_6_min-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_6_min-768.jpg 2x
           "
           media="(min-width: 768px)"
           type="image/jpeg"
         />
         <source
           srcset="
-            ../img/images_gallery/img_x1_gallery_6_max-768.jpg 1x,
-            ../img/images_gallery/img_x2_gallery_6_max-768.jpg 2x
+            /img/images_gallery/img_x1_gallery_6_max-768.jpg 1x,
+            /img/images_gallery/img_x2_gallery_6_max-768.jpg 2x
           "
           media="(max-width: 767px)"
           type="image/jpeg"
         />
         <img
-          src="../img/images_gallery/img_x1_gallery_6_max-768.jpg"
+          src="/img/images_gallery/img_x1_gallery_6_max-768.jpg"
           alt="yoga"
           width="*"
           height="auto"
